# ai-engineering-bootcamp

./: CHANGELOG.md  CONTINUE.md  HANDBOOK.md  PROGRESS.md  README.md  ROADMAP.md  lesson.md
project/anima/: pyproject.toml
project/anima/src/anima/: __init__.py
project/anima/src/anima/core/: characters.py
project/anima/tests/: test_character.py  test_package.py
scripts/: generate_chapter_notes.py
templates/: architecture-notes.md  assignment.md  cheatsheet.md  interview-prep.md  quiz.md  summary.md
