[project]
name = "anima"
version = "0.1.0"
description = "AI Character Engine — persistent memory, evolving personality, autonomous behavior"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Kaustubh Vatsa", email = "kaustubh26vatsa@gmail.com" }
]

dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["anima"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
